# otus

./: .travis.yml  CMakeLists.txt  LICENSE
docs/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  globals.html  index.html  namespaces.html  print__ip_8cpp__incl.dot  print__ip_8hpp.html  structhomework3_1_1detail_1_1tuple__node.html  structhomework3_1_1detail_1_1tuple__node_3_010_00_01_t1_00_01_t2_8_8_8_01_4-members.html
docs/search/: all_0.js  all_2.js  all_3.js  namespaces_0.html
homework1/: CMakeLists.txt
homework1/task1/: CMakeLists.txt
homework1/task1/test/: CMakeLists.txt  main.cpp
homework1/task2/: CMakeLists.txt
homework1/task2/include/: ip.hpp  ipv4.hpp
homework1/task2/src/: ipv4.cpp  main.cpp
homework1/task2/test/: CMakeLists.txt  ipv4.cpp  main.cpp
homework2/: CMakeLists.txt
homework2/include/: ListPoolControlBlock.hpp  PoolAllocator.hpp  PoolControlBlock.hpp
homework2/include/allocator/: ListPoolControlBlock.hpp  PoolAllocator.hpp  PoolControlBlock.hpp
homework2/include/list/: CustomList.hpp
homework2/include/vector/: CustomVector.hpp
homework2/src/: main.cpp
homework2/test/: CMakeLists.txt  CustomVector.cpp  ListPoolControlBlock.cpp  PoolAllocator.cpp  PoolControlBlock.cpp
homework3/: CMakeLists.txt  Doxyfile
homework3/docs/: annotated.html  dir_000001_000000.html  files.html  functions_func.html  main_8cpp__incl.dot  structhomework3_1_1detail_1_1tuple__node_3_010_00_01_t1_00_01_t2_8_8_8_01_4.html
homework3/docs/html/: classes.html  globals_func.html  graph_legend.html  main_8cpp.html  menudata.js  namespacehomework3.html  namespacehomework3_1_1detail.html  namespacemembers.html  namespacemembers_func.html  print__ip_8cpp.html  print__ip_8hpp__dep__incl.dot  print__ip_8hpp__incl.dot  print__ip_8hpp_source.html  structhomework3_1_1detail_1_1tuple__node-members.html
homework3/docs/html/search/: classes_0.js  functions_0.html  functions_1.html  functions_1.js  namespaces_0.js
homework3/docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex.tmp  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp__incl.dot  namespacehomework3.tex  namespacehomework3_1_1detail.tex  namespaces.tex  print__ip_8cpp.tex  print__ip_8cpp__incl.dot  print__ip_8hpp.tex  print__ip_8hpp__dep__incl.dot  print__ip_8hpp__incl.dot  refman.tex  structhomework3_1_1detail_1_1tuple__node.tex  structhomework3_1_1detail_1_1tuple__node_3_010_00_01_t1_00_01_t2_8_8_8_01_4.tex
homework3/docs/search/: classes_0.html  files_1.js  functions_2.html  functions_2.js  searchdata.js
homework3/include/: print_ip.hpp
homework3/src/: main.cpp  print_ip.cpp
homework3/test/: CMakeLists.txt  print_ip.cpp
homework4/: CMakeLists.txt
homework4/src/: main.cpp
homework4/test/: CMakeLists.txt
